--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@angular/common": "^16.0.0",
     "@angular/compiler": "^16.0.0",
     "@angular/core": "^16.0.0",
+    "@angular/fire": "^7.6.1",
     "@angular/forms": "^16.0.0",
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
@@ -29,6 +30,8 @@
     "@capacitor/status-bar": "5.0.6",
     "@ionic/angular": "^7.0.0",
     "ionicons": "^7.0.0",
+    "lottie-web": "^5.12.2",
+    "ngx-lottie": "^10.0.0",
     "rxjs": "~7.8.0",
     "swiper": "^10.0.4",
     "tslib": "^2.3.0",
@@ -51,6 +54,7 @@
     "@types/node": "^12.11.1",
     "@typescript-eslint/eslint-plugin": "5.3.0",
     "@typescript-eslint/parser": "5.3.0",
+    "autoprefixer": "^10.4.14",
     "eslint": "^7.26.0",
     "eslint-plugin-import": "2.22.1",
     "eslint-plugin-jsdoc": "30.7.6",
@@ -63,6 +67,8 @@
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
+    "postcss": "^8.4.27",
+    "tailwindcss": "^3.3.3",
     "ts-node": "^8.3.0",
     "typescript": "~5.0.2"
   },
